--- a/src/main/resources/static/css/admin/default.css
+++ b/src/main/resources/static/css/admin/default.css
@@ -172,6 +172,12 @@ section.modal-stage {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+section.volunteer-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 .modal {
   width: 900px;
