--- a/src/main/resources/templates/admin/volunteer.html
+++ b/src/main/resources/templates/admin/volunteer.html
@@ -20,7 +20,13 @@
   <style>
     .user__profile__input input {
     padding: 3px 5px;
-}
+    }
+    .volunteer_input{
+      width: 630px;
+    }
+  .button__type_2 {
+      width: 70px;
+    }
   </style>
   <body>
     <section class="main">
@@ -447,6 +453,9 @@
                     <button class="content__detail__btn button__type_2 button__color__green">
                       상세보기
                     </button>
+                    <button class="button__type_2 volunteer_button button__color__green">
+                      신청명단
+                    </button>
                   </td>
                 </tr>
                 <tr class="table__content">
@@ -465,6 +474,9 @@
                     <button class="content__detail__btn button__type_2 button__color__green">
                       상세보기
                     </button>
+                    <button class="button__type_2 volunteer_button button__color__green">
+                      신청명단
+                    </button>
                   </td>
                 </tr>
               </table>
@@ -480,7 +492,7 @@
                   <input type="hidden">
                   <input type="hidden">
                 </form>
-            </div>
+              </div>
             </div>
           </div>
         </main>
@@ -517,7 +529,6 @@
               </svg>
             </a>
           </div>
-          <!-- 봉사기간(시작, 끝), 봉사시간, 모집기간(시작, 끝), 모집인원, 봉사분야, 등록기관, 봉사장소 -->
           <form class="storage_form" action="">
             <main class="modal__main">
               <div class="modal__profile__top">
@@ -573,7 +584,7 @@
                     <input type="text" name="" value="서울 복지센터" readonly="true" />
                   </div>
                 </div>
-                <h4>이미지</h4>
+                <h4 style="margin-top: 20px;">이미지</h4>
                 <!-- 이미지 파일 -->
                 <div class="content__img__wrap">
                     <!-- 임시로 name='file' 해둠 -->
@@ -647,6 +658,83 @@
           </form>
         </section>
       </section>
+      <section class="volunteer-modal" style="display: none">
+        <section class="modal">
+          <div class="modal__header">
+            <h3 class="modal__title">봉사 신청 명단</h3>
+            <a class="modal-close">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                data-name="Capa 1"
+                id="Capa_1"
+                viewBox="0 0 20 19.84">
+                <path
+                  d="M10.17,10l3.89-3.89a.37.37,0,1,0-.53-.53L9.64,9.43,5.75,5.54a.37.37,0,1,0-.53.53L9.11,10,5.22,13.85a.37.37,0,0,0,0,.53.34.34,0,0,0,.26.11.36.36,0,0,0,.27-.11l3.89-3.89,3.89,3.89a.34.34,0,0,0,.26.11.35.35,0,0,0,.27-.11.37.37,0,0,0,0-.53Z" />
+              </svg>
+            </a>
+          </div>
+          <form class="storage_form" action="">
+            <main class="modal__main">
+              <div class="modal__profile__top">
+                <h4>신청자</h4>
+                <div class="user__profile volunteer_profile">
+                  <h5>회원정보</h5>
+                  <div class="user__profile__input volunteer_input">
+                    <input type="text" name="" value="회원번호" readonly="true" />
+                    <input type="text" name="" value="이름" readonly="true" />
+                    <input type="text" name="" value="전화번호" readonly="true" />
+                    <input type="text" name="" value="아이디" readonly="true" />
+                  </div>
+                </div>
+                <div class="user__profile">
+                <h5></h5>
+                  <div class="user__profile__input volunteer_input">
+                    <input type="text" name="" value="1" readonly="true" />
+                    <input type="text" name="" value="홍길동" readonly="true" />
+                    <input type="text" name="" value="01011112222" readonly="true" />
+                    <input type="text" name="" value="kmg2331" readonly="true" />
+                  </div>
+                </div>
+                <div class="user__profile">
+                <h5></h5>
+                  <div class="user__profile__input volunteer_input">
+                    <input type="text" name="" value="1" readonly="true" />
+                    <input type="text" name="" value="홍길동" readonly="true" />
+                    <input type="text" name="" value="01011112222" readonly="true" />
+                    <input type="text" name="" value="kmg2331" readonly="true" />
+                  </div>
+                </div>
+                <div class="user__profile">
+                <h5></h5>
+                  <div class="user__profile__input volunteer_input">
+                    <input type="text" name="" value="1" readonly="true" />
+                    <input type="text" name="" value="홍길동" readonly="true" />
+                    <input type="text" name="" value="01011112222" readonly="true" />
+                    <input type="text" name="" value="kmg2331" readonly="true" />
+                  </div>
+                </div>
+                <div>
+                  <div class="paging" style="margin-top: 28px; margin-bottom: -57px; text-align: center;">
+                    <a class="changePage" style="color: black"><code><</code></a>
+                    <code id="currentPage">1</code>
+                      <a class="changePage" style="color: black"}"><code>2</code></a>
+                    <a class="changePage"style="color: black"><code>></code></a>
+                  </div>
+                  <form name="pageForm">
+                    <input type="hidden">
+                    <input type="hidden">
+                  </form>
+                </div>
+                <div class="user__profile__button" style="margin-top: 20px;">
+                  <button id="completeBtn" class="button__type_2 button__color__green">
+                    작성완료
+                  </button>
+                </div>
+              </div>
+            </main>
+          </form>
+        </section>
+      </section>
     </section>
   </body>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -675,6 +763,14 @@
        });
 
     })
+
+    $('.volunteer_button').on('click', ()=>{
+      $('.volunteer-modal').show();
+        $('.modal-close').on('click', function () {
+          $('.volunteer-modal').fadeOut(500);
+        });
+    })
+    
   </script>
   <script src="/static/js/admin/app.js"></script>
   <script src="/static/js/admin/events.js"></script>
