자유게시판 작성 수정

--- a/src/main/resources/templates/community/free-create.html
+++ b/src/main/resources/templates/community/free-create.html
@@ -154,47 +154,67 @@
     <!-- 전체 div -->
     <div class="board">
         <section class="board-container">
-            <div class="register">
-                <div class="register-container">
-                    <button class="register-btn" disabled>등록</button>
-                </div>
-            </div>
-            <div class="photo" id="photo">
-                <label>
-                    <input id="file_input" type="file" style="display: none;">
-                    <div class="photo-container">
-                        <div class="photo-img"></div>
+            <form action="">
+                <div class="register">
+                    <div class="register-container">
+                        <button class="register-btn" type="button" disabled>등록</button>
                     </div>
-                </label>
-            </div>
-            <div class="content">
-                <div class="content-container">
-                    <div class="title">
-                        <div class="title-container">
-                            <label class="title-label">
-                                <input type="text" placeholder="제목을 입력해주세요." class="title-input">
-                            </label>
+                </div>
+                <label id="photo-picker">
+                    <div class="photo" id="photo">
+                        <input id="file_input" type="file" style="display: none;">
+                        <div class="photo-container">
+                            <div class="photo-img"></div>
                         </div>
                     </div>
-                    <div class="line"></div>
-                    <div class="contents">
-                        <span class="contents-span1">
-                            <textarea class="contents-text" placeholder="궁금했던 모든 것을 자유롭게 작성해보세요.
+                </label>
+                <div class="content">
+                    <div class="content-container">
+                        <div class="title">
+                            <div class="title-container">
+                                <label class="title-label">
+                                    <input type="text" placeholder="제목을 입력해주세요." class="title-input">
+                                </label>
+                            </div>
+                        </div>
+                        <div class="line"></div>
+                        <div class="contents">
+                            <span class="contents-span1">
+                                <textarea class="contents-text" placeholder="궁금했던 모든 것을 자유롭게 작성해보세요.
 
-예) 봉사 함께하실 심청이 구합니다.
-예) 후원은 어떻게 하면 되나요?
-                            
-※ 주제에 맞지 않는 글이나 커뮤니티 이용정책에 위배되는 글은 신고의 대상이 됩니다.
-※ 일정 수 이상의 신고를 받으면 작성한 글이 숨김 및 삭제될 수 있습니다."></textarea>
-                        </span>
+    예) 봉사 함께하실 심청이 구합니다.
+    예) 후원은 어떻게 하면 되나요?
+                                
+    ※ 주제에 맞지 않는 글이나 커뮤니티 이용정책에 위배되는 글은 신고의 대상이 됩니다.
+    ※ 일정 수 이상의 신고를 받으면 작성한 글이 숨김 및 삭제될 수 있습니다."></textarea>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </section>
+        <div >
+            <div class="modal">
+                <h4 class="modal-title">게시물 등록</h4>
+                <div class="modal-content">게시물을 등록하시겠습니까?</div>
+                <div class="modal-choce">
+                    <div class="choce1">
+                        <button class="choce1-btn">취소</button>
+                    </div>
+                    <div class="choce2">
+                        <button class="choce2-btn">등록</button>
                     </div>
                 </div>
             </div>
-        </section>
+            <div class="modal-back"></div>
+        </div>
     </div>
+    
 
+    <!-- 푸터 임시 -->
+    <footer id="_footer"></footer>
     <!-- 푸터 -->
-    <div class="full-screen">
+    <!-- <div class="full-screen">
         <footer class="footer-wrapper">
             <div class="footer-link-wrapper">
                 <div class="footer-site-map-wrapper">
@@ -348,8 +368,14 @@
                 </div>
             </div> -->
         </footer>
-    </div>
+    </div> -->
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#_header').load('../main/header.html');
+        $('#_footer').load('../main/footer.html');
+    });
+</script>
 <script src="../../static/js/community/free-create.js"></script>
 </html>
