문의하기 모달 작업중  후원요청 썸머노트로 수정

--- a/src/main/resources/templates/support/support-list.html
+++ b/src/main/resources/templates/support/support-list.html
@@ -21,7 +21,12 @@
                     <div class="semi_header">
                         <div class="semi_header_div">
                             <div class="wrap">
-                                <span class="wrap_span">
+                                <!-- <select class="wrap_span">
+                                    <option>후원 많은 순</option>
+                                    <option>후원 적은 순</option>
+                                    <option>최신순</option>
+                                </select> -->
+                                <!-- <span class="wrap_span">
                                     <button class="achievement">
                                         <span class="achievement_first_span">모금 많은 순</span>
                                         <span class="achievement_second_span">
@@ -31,7 +36,7 @@
                                                 </svg>
                                             </div>
                                         </span>
-                                        <!-- display: none 윗 화살표 -->
+                                        <!-- display: none 윗 화살표 
                                         <span class="achievement_third_span">
                                             <div class="arrow">
                                                 <svg viewBox="0 0 48 48" class="arrow_svg">
@@ -40,14 +45,8 @@
                                             </div>
                                         </span>
                                     </button>
-                                </span>
-                                 <!-- <span class="wrap_span">
-                                    <button class="recommend">
-                                        <span class="">에디터 추천</span>
-                                        <span></span>
-                                        <span></span>
-                                    </button>
                                 </span> -->
+                                 
                             </div>
                         </div>
                     </div>
@@ -58,6 +57,11 @@
                     <div class="have_project">
                         <span style="color: rgb(255, 87, 87);">46,860</span>
                         개의 후원 목록이 있습니다.
+                        <select class="wrap_span">
+                            <option>후원 많은 순</option>
+                            <option>후원 적은 순</option>
+                            <option>최신순</option>
+                        </select>
                     </div>
                     <div class="real_content">
                         <div class="first_content">
