--- a/src/main/resources/templates/volunteer-work/work-apply-modal.html
+++ b/src/main/resources/templates/volunteer-work/work-apply-modal.html
@@ -51,15 +51,21 @@
                                         <option value="019">019</option>
                                     </select>
                                     <span class="">-</span> 
-                                    <input type="text" id="prttel_2" name="" value="" title="핸드폰번호 중간자리" maxlength="4" class="apply-text apply-width">
+                                    <input type="text" id="" name="" value="" title="핸드폰번호 중간자리" maxlength="4" class="apply-text apply-width">
                                     <span class="">-</span>
-                                    <input type="text" id="prttel_3" name="" value="" title="핸드폰번호 뒷자리" maxlength="4" class="apply-text apply-width">
+                                    <input type="text" id="" name="" value="" title="핸드폰번호 뒷자리" maxlength="4" class="apply-text apply-width">
                                 </td>
                             </tr>
                             <tr>
                                 <th scope="row">* 이메일</th>
                                 <td>
-                                <input type="text" name="prtemail" id="prtemail" value="" title="이메일" class="apply-text">
+                                <input type="text" name="" id="" value="" title="이메일" class="apply-text">
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">* 봉사 날짜</th>
+                                <td>
+                                <input type="date" name="" id="" value="" title="날짜" class="apply-text">
                                 </td>
                             </tr>
                         </tbody>
