--- a/src/main/resources/static/css/support/support-list.css
+++ b/src/main/resources/static/css/support/support-list.css
@@ -98,18 +98,22 @@ a, div {
 
 .wrap_span{
     border: 1px solid rgb(230, 230, 230);
-    display: flex;
+    /* display: flex; */
+    float: right;
     position: relative;
+    width: 106px;
     height: 34px;
     line-height: 34px;
     box-sizing: border-box;
-    margin: 0px 8px 0px 0px;
+    margin: -3px 39px 0px 16px;
     border-radius: 3px;
     background: rgb(255, 255, 255);
     color: rgb(72, 72, 72);
     padding: 0px;
     overflow: hidden;
 }
+
+
 
 .achievement{
     outline: 0;
