--- a/src/main/resources/static/css/support/support-write.css
+++ b/src/main/resources/static/css/support/support-write.css
@@ -651,12 +651,14 @@ button[disabled], input[disabled] {
 }
 
 .submit-button-layout{
-    display: flex;
+    /* display: flex;
     -webkit-box-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    align-items: center;
+    -webkit-box-align: center; */
+    /* align-items: center; */
     padding-top: 40px;
+    width: 922px;
+    text-align: center;
 }
 
 .submit-button {
